--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -1,16 +1,14 @@
 # The effect of obesity on platelet function: a clinical pilot study {#BMI-platelets-clinic}
 
-The following results section is a clinical study. Recruitment into this study has been severely affected by COVID-19: approvals were set in place to start recruitment in March 2020. All data in this chapter was collected by myself, apart from the platelet-neutrophil assay data, which was performed by Dr Chris Williams and the Sysmex haematology analyzer data was collected by Dr Kate Burley, due to time constraints when receiving patient samples. The proteomic data was analysed by the Proteomics facility at the University of Bristol.  
-
-Comment RE some of the methods I wrote for the COVID-19 manuscript are included here. May need to link if the COVID-19 paper is online when submitting.
+The following results section is a clinical study. Recruitment into this study has been severely affected by COVID-19: approvals were set in place to start recruitment in March 2020. All data in this chapter was collected by myself, apart from the platelet-neutrophil assay data, which was performed by Dr Chris Williams and the Sysmex haematology analyzer data, which was collected by Dr Kate Burley. Help was required here due to time constraints when receiving patient samples. The proteomic data was analysed by the Proteomics facility at the University of Bristol. Methods have been used within a study to explore the effect of COVID-19 on platelet function given the increased risk of thrombosis. This has been written up as a manuscript but will not be included in the thesis due to not aligning with the current aims.
 
 ## Background
 
-As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke [@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis [@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was positively associated with whole blood platelet aggregation in a cardiac surgery cohort. Although this suggests that higher BMI leads to platelet hyperactivity, this association was not directly assessed. 
+As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke [@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis [@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was also positively associated with whole blood platelet aggregation in response to various platelet agonists (adrenaline, protease activating receptor 1 peptide (PAR1-AP/TRAP-6) and adenosine diphosphate (ADP)) in a cardiac surgery cohort. Although these analyses suggest that higher BMI leads to platelet hyperactivity, this association was not directly assessed due to the limited platelet function data available. 
 
-Upon activation platelets adhere to the vessel endothelium, where they undergo shape change, release their granules and aggregate. There are numerous laboratory techniques that can be used to measure platelet function [@Paniccia2015]. Experiments include flow cytometry which use fluorescently tagged antibodies that bind to platelet receptors, some of which are increasingly exposed upon stimulation by known platelet agonists such as protease activated receptor-1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Other experiments commonly used include light transmission aggregometry (LTA), which measures the degree of platelet aggregation in response to platelet agonists by how much light passes through the sample. Techniques such as LTA are difficult to implement with patient samples due the requirement of a substantial amount of sample and due to experiments being time consuming. As platelet function declines over a few hours after removal from circulation [@Goss2019], it is preferable to opt for experiments which can be performed quickly. It is also possible to explore the intracellular signalling which occurs within the platelets by using techniques such as Western blotting and tandem mass tag mass spectrometry (TMT-MS), which use targeted and untargeted methods, respectively, to measure protein levels. 
+Upon activation, platelets adhere to the vessel endothelium, where they undergo shape change, release their granules and aggregate. There are numerous laboratory techniques that can be used to measure platelet function [@Paniccia2015]. Experiments include flow cytometry which use fluorescently tagged antibodies that bind to platelet receptors. Some receptors are increasingly exposed upon stimulation such as the integrin α~IIb~β~3~ which is important for aggregation, as well as the adhestion receptor P-selectin. Platelet agonists which are able to increase the expression of these receptors include PAR1-AP, ADP and collagen-related peptide (CRP). Other experiments commonly used include light transmission aggregometry (LTA), which measures the degree of platelet aggregation in response to platelet agonists by how much light passes through the sample. Techniques such as LTA are difficult to implement with patient samples due the requirement of a substantial amount of sample and due to experiments being time consuming. As platelet function declines over a few hours after removal from circulation [@Goss2019], it is preferable to opt for experiments which can be performed quickly. It is also possible to explore the intracellular signalling which occurs within the platelets by using techniques such as Western blotting and tandem mass tag mass spectrometry (TMT-MS), which use targeted and untargeted methods, respectively, to measure protein or phosphoprotein levels. 
 
-Previous studies have attempted to determine the direct effects of BMI on platelet function and signalling [@Barrachina2019; @Nardin2015; @Deharo2014; @Sibbing2007], where there is mixed evidence regarding how BMI affects platelet function. Previous studies have focused on the relationship between BMI and platelet function in patients receiving dual antiplatelet therapy (DAPT). It is less clear what the relationship is between BMI and platelet function in those who are not on any antiplatelet therapy.
+Previous studies have attempted to determine the direct effects of BMI on platelet function and signalling [@Barrachina2019; @Nardin2015; @Deharo2014; @Sibbing2007], where there is mixed evidence regarding how BMI affects platelet function. Previous studies have focused on the relationship between BMI and platelet function in patients receiving dual antiplatelet therapy (DAPT). In these studies there is evidence that in people with higher BMI, antiplatelet drugs such as prasugrel, which acts at the P2Y12 receptor, may not be as effective at suppressing platelet activity [@Deharo2014]. Many studies have focused on measuring phospho-VASP as an indicator of platelet function at the P2Y12 receptor, where higher phospho-VASP levels are indicative of less inhibition by the antiplatelet drug. It is less clear what the relationship is between BMI and platelet function in those who are not on any antiplatelet therapy and across other platelet function assays.
 
 Therefore, the aims of this chapter were to:
 
@@ -22,15 +20,15 @@ include_graphics(path = "figure/Bariatric_study/Thesis_graphic_overview_BMI_plat
 ```
 
 ## Methods
-The platelet function methods and statistical analyses utlised within this study are provided in the Methods chapter (Chapter \@ref(common-methods)).
+The platelet function methods and statistical analyses utlised within this study are provided in the common Methods chapter (Chapter \@ref(common-methods)).
 
 ### Study population
-This study was approved by the London Riverside Research Ethics Committee. All participants provided written informed consent. Patients, who were due to undergo bariatric surgery, with a body mass index of >40kg/m^2^, were recruited from the Department of Bariatric and Metabolic Surgery at Southmead Hospital, Bristol. Participants with a BMI between 18 and 25 kg/m^2^ were recruited from the University of Bristol. Inclusion criteria for participants were: aged 18 years and over and able to give written informed consent. Participants were excluded if they were pregnant or lactating, had any known clotting or bleeding disorders (e.g. von Willebrand disease or drug-induced thrombocytopenia), or if they had taken any antiplatelet medication within the previous 14 days such as clopidogrel, ticagrelor or aspirin or any other non-steroidal anti-inflammatory drug (NSAID). Recruitment occurred between May and June 2021. As a pilot study, a total of four bariatric patients with obesity and four control participants were recruited. Bariatric patients donated blood before bariatric surgery.
+This study was approved by the London Riverside Research Ethics Committee. All participants provided written informed consent. Patients, who were due to undergo bariatric surgery, with a body mass index of >40kg/m^2^, were recruited from the Department of Bariatric and Metabolic Surgery at Southmead Hospital, Bristol. Participants with a BMI between 18.5 and 25 kg/m^2^ were recruited from the University of Bristol. Inclusion criteria for participants were: aged 18 years and over, able to give written informed consent and sufficient level of English to understand the study and ask any questions. Participants were excluded if they were pregnant or lactating, had any known clotting or bleeding disorders (e.g. von Willebrand disease or drug-induced thrombocytopenia), or if they had taken any antiplatelet medication within the previous 14 days such as clopidogrel, ticagrelor or aspirin or any other non-steroidal anti-inflammatory drug (NSAID). Recruitment occurred between May 2021 and June 2021. As a pilot study, a total of four bariatric patients with obesity and four age and sex-matched control participants were recruited. Bariatric patients donated blood before bariatric surgery.
 
 ## Results
 
 ### Participant characteristics
-The characteristics of participants included in the study are shown in Table  \@ref(tab:obesity-platelets-participants). The mean BMI in the control group was 21.8 kg/m^2^ (SD 2.1 kg/m^2^) and 49.3 kg/m^2^ (SD 8.8 kg/m^2^). Participants in the control group and bariatric patient group were age and sex matched. Bariatric patients exhibited similar smoking habits to control participants, however they displayed increased rates of T2D and previous symptomatic COVID-19 infection.
+The characteristics of participants included in the study are shown in Table  \@ref(tab:obesity-platelets-participants). The mean BMI in the control group was 21.8 kg/m^2^ (SD 2.1 kg/m^2^) and 49.3 kg/m^2^ (SD 8.8 kg/m^2^). Participants in the control group and bariatric patient group were age and sex matched. All bariatric patients and control participants were non-smokers. Half of the bariatric patients presented with type 2 diabetes (T2D) and were receiving T2D medication, whereas none of the control participants had T2D. Similarly, 75% of the bariatric patients had previously had a positive test for COVID-19 but none of the control participants had ever tested positive for COVID-19.  
 
 ```{r obesity-platelets-participants,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -60,19 +58,19 @@ i = c("235.8 (61.5)", "7.3 (8.3)", "16.3 (16.3)", "85.1 (9.8)", "60.5 (8.8)", "4
 p <- c(0.54,0.44,0.45,0.61,0.24,0.37) 
 mytable = data.frame("Platelet trait"  = f, "Control mean (SD) or %" = co, "Bariatric patient mean (SD) or %" = i, "P value for difference" = p)
 colnames(mytable) <- c('Variable', "Control mean (SD)", "Bariatric patient mean (SD)", "P value for difference" )
-mytable %>% kable(caption = "Platelet traits measured by Sysmex XE-2100", booktabs = TRUE) %>% 
+mytable %>% kable(caption = "Comparison of platelet traits measured by Sysmex XE-2100 across bariatric and control groups", booktabs = TRUE) %>% 
   kable_classic_2(full_width = F) %>%
   #kable_paper("hover", full_width = F)
  kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "4cm")
+column_spec(1, width = "5cm")
 
 ```
 
 ### Basal receptors
-Unstimulated platelet receptor levels were compared across bariatric patient and control participant groups. Basal integrin α~IIb~β~3~ activation and P-selectin expression were similar across groups (Figures \@ref(fig:basal-integrin-pselectin-receptor-bariatric)A and B). Similarly, other platelet receptors under basal confitions including GPVI, CD42b (GP1bα), CD41 (integrin α~IIb~), CD61 (Integrin β~3~), CD110 (thrombopoietin/TPO receptor) were not different across groups (Figure \@ref(fig:basal-integrin-pselectin-receptor-bariatric)C). 
+Unstimulated platelet receptor levels were compared across bariatric patient and control participant groups. Basal integrin α~IIb~β~3~ activation and P-selectin expression were similar across groups (Figures \@ref(fig:basal-integrin-pselectin-receptor-bariatric)A and B). Similarly, other platelet receptors under basal conditions including GPVI, CD42b (GP1bα), CD41 (integrin α~IIb~), CD61 (Integrin β~3~), CD110 (thrombopoietin/TPO receptor) were not different across groups (Figure \@ref(fig:basal-integrin-pselectin-receptor-bariatric)C). 
 
 (ref:scaption1) Comparison of basal integrin α~IIb~β~3~ activation, P-selectin expression and surface receptors levels across control and bariatric patient groups
-(ref:caption1) Diluted PRP was used for experiments, where platelets were incubated with antibodies for 10 minutes before fixing. Bar graphs comparing A) Basal integrin α~IIb~β~3~ activation B) Basal  P-selectin expression and C) Basal surface receptor expression across bariatric patient and control groups. N=4. P-values indicated for unpaired t-test results.
+(ref:caption1) Comparison of basal integrin α~IIb~β~3~ activation, P-selectin expression and surface receptors levels across control and bariatric patient groups. Diluted PRP was used for experiments, where platelets were incubated with antibodies for 10 minutes before fixing. Bar graphs comparing A) Basal integrin α~IIb~β~3~ activation B) Basal  P-selectin expression and C) Basal surface receptor expression across bariatric patient and control groups. N=4. P-values indicated for unpaired t-test results. Mean + SEM displayed.
 
 ```{r basal-integrin-pselectin-receptor-bariatric, out.width = "90%", echo = FALSE, fig.cap="(ref:caption1)", fig.scap= "(ref:scaption1)"}
 include_graphics(path = "figure/Bariatric_study/Basal_surface_receptors.pdf", dpi = NA)
@@ -85,7 +83,7 @@ include_graphics(path = "figure/Bariatric_study/Basal_surface_receptors.pdf", dp
 Markers of platelet activation were compared in response to different platelet agonists. There was no difference in the levels of the integrin α~IIb~β~3~ or P-selectin across bariatric patients and control groups in response to PAR1-AP, ADP or CRP (Figures \@ref(fig:agonist-integrin-pselectin)A-F), as determined by the logEC50 or the curve maximum values.
 
 (ref:scaption2) Concentration-response curves of integrin α~IIb~β~3~ activation and P-selectin expression
-(ref:caption2) Concentration-response curves of integrin α~IIb~β~3~ activation in platelet rich plasma diluted in HEPES-Tyrode's in response to A) PAR1-AP, B) ADP and C) CRP. Concentration-response curves of P-selectin expression in response to D) PAR1-AP, E) ADP, F) CRP. N=4.
+(ref:caption2) Concentration-response curves of integrin α~IIb~β~3~ activation in platelet rich plasma diluted in HEPES-Tyrode's in response to A) PAR1-AP, B) ADP and C) CRP. Concentration-response curves of P-selectin expression in response to D) PAR1-AP, E) ADP, F) CRP. N=4. Mean ± SEM displayed.
 
 ```{r agonist-integrin-pselectin, out.width = "95%",echo = FALSE, fig.cap="(ref:caption2)", fig.scap= "(ref:scaption2)"}
 include_graphics(path = "figure/Bariatric_study/Agonist_Integrin_Pselectin.pdf", dpi = NA)
@@ -97,7 +95,7 @@ include_graphics(path = "figure/Bariatric_study/Agonist_Integrin_Pselectin.pdf",
 Next, platelet-neutrophil interactions were explored by gating neutrophils and determining the degree of platelets bound to neutrophils by using an antibody for the platelet specific anti-CD41 antibody. There was no difference in the percentage of platelets bound to neutrophils under basal conditions (7.0 % (SEM 1.5 %) in control v 11.2 % (SEM 3.2%) in bariatric patient group, p=0.30). Similarly, after stimulation with CRP, there was no difference in the platelet-neutrophil aggregates (38.6 % (SEM 2.6 %) in control group v 35.5 % (SEM 2.7 %), p=0.48).  
 
 (ref:scaption2b) Comparison of platelet-neutrophil aggregates
-(ref:caption2b) Comparison of platelet-neutrohpil aggregates across bariatric patient and control participant groups in unstimulated and stimulated (5 ug/mL CRP) conditions. N=4. P-values provided for the results of a two-way ANOVA with Sidak's multiple comparisons tests.
+(ref:caption2b) Comparison of platelet-neutrohpil aggregates across bariatric patient and control participant groups in unstimulated and stimulated (5 ug/mL CRP) conditions. N=4. P-values provided for the results of a two-way ANOVA with Sidak's multiple comparisons tests. Mean + SEM displayed.
 
 ```{r platelet-neutrophil, echo = FALSE, out.width = "80%", fig.cap="(ref:caption2b)", fig.scap= "(ref:scaption2b)"}
 include_graphics(path = "figure/Bariatric_study/Plt-neu_aggregates.pdf", dpi = NA)
@@ -123,8 +121,7 @@ include_graphics(path = "figure/Bariatric_study/PC3vPC4_proteomics.pdf", dpi = N
 
 ```
 
-There was evidence (p<0.05) that 188 out of a total of 5318 detected platelet proteins were altered in bariatric patients with obesity compared to controls \@ref(fig:volcano). The protein which had the strongest evidence for a BMI effect was phosphatidylinositol 4-kinase beta (PI4K-beta) (logFC 0.45, p=6.3x10^-5^). The signalling protein G protein-coupled receptor kinase (GRK6) was lower in bariatric patients (logFC -0.15, p=0.002). The adipocyte plasma membrane-associated protein (APMAP) was increased in bariatric patients (logFC 0.23, p=0.006).  Proteins previously reported to be associated with BMI replicated here, including actin (cytoplasmic 1, logFC 0.51, p=0.03) and septin-2 (logFC 0.14, p=0.03). Previous studies have also identified platelet transcripts associated with BMI. The current study provided evidence that these trascripts relate to proteomics, as BMI is associated with myeloperoxidase (LogFC 1.15, p=0.04) and protein S100-A9 (logFC 1.48, p=0.049). Similar to the flow cytometry results, no alteration in protein receptors such as the α~IIb~ integrin and GPVI receptor was detected. The full proteomic results can be found here https://github.com/lucygoudswaard/mythesis/blob/f17f0250ad50bad74d7e38225d060aa6cd83321b/index/figure/Bariatric_study/Proteomics_results.xlsx
-
+There was evidence (p<0.05) that 188 out of a total of 5318 detected platelet proteins (3.5%) were altered in bariatric patients with obesity compared to controls \@ref(fig:volcano). Positive logFC values indicate the protein having higher levels in the bariatric group. The protein which had the strongest evidence for a BMI effect was phosphatidylinositol 4-kinase beta (PI4K-beta) (logFC 0.45, p=6.3x10^-5^). The signalling protein G protein-coupled receptor kinase (GRK6) was lower in bariatric patients (logFC -0.15, p=0.002), whereas the adipocyte plasma membrane-associated protein (APMAP) was increased in bariatric patients (logFC 0.23, p=0.006). Platelet proteins previously reported to be associated with BMI replicated here, including gelsolin (logFC -0.14, p=0.018), actin (cytoplasmic 1, logFC 0.51, p=0.03) and septin-2 (logFC 0.14, p=0.03). Previous studies have also identified platelet transcripts associated with BMI. The current study provided evidence that these transcripts relate to proteomics, as BMI was associated with myeloperoxidase (LogFC 1.15, p=0.04) and protein S100-A9 (logFC 1.48, p=0.049). Similar to the flow cytometry results, no alteration in protein receptors such as the α~IIb~ integrin and GPVI receptor was detected. The full platelet proteomic results can be found here https://github.com/lucygoudswaard/mythesis/blob/f17f0250ad50bad74d7e38225d060aa6cd83321b/index/figure/Bariatric_study/Proteomics_results.xlsx
 
 (ref:scaption-volcano) A volcano plot comparing the Log~2~ fold change in protein levels in bariatric patients compared to controls
 (ref:caption-volcano) A volcano plot comparing the Log~2~ fold change in protein levels in bariatric patients compared to controls
@@ -136,11 +133,11 @@ include_graphics(path = "figure/Bariatric_study/volcano_proteomics_labelled.pdf"
 
 ## Discussion
 
-This chapter has explored the effect of obesity on platelet parameters and platelet function by collecting samples from bariatric patients and controls. Here, I have optimised common experimental laboratory techniques for use within a patient study. These experiments have been used to look at platelet function within other patient groups (e.g. COVID-19) and can be implemented in future patient studies. The study did not detect any functional differences in platelet parameters and function from bariatric patients compared to healthy controls, but proteomics analysis by TMT-MS detected differences in platelet protein abundance, which may have implications for platelet signalling. 
+This chapter explored the effect of obesity on platelet parameters and platelet function by collecting pre-surgery samples from bariatric patients and age and sex-matched controls. Here, I have optimised common experimental laboratory techniques for use within a patient study. These experiments have been used to look at platelet function within other patient groups (e.g. COVID-19) and can be implemented in future patient studies. The study did not detect any functional differences in platelet parameters and function from bariatric patients compared to healthy controls, but proteomics analysis by TMT-MS detected differences in platelet protein abundance, which may have implications for platelet signalling. 
 
-This study did not detect differences in platelet characteristics such as IPC when comparing the high BMI bariatric surgery group with the control group. This small sample size and large standard deviation in the high BMI group would explain why a BMI and IPC association was detected in Chapter \@ref(BMI-platelets-INTERVAL) but wasn't in the current study. There was also no evidence for a difference in levels of platelet receptors under basal conditions, nor differences in levels of platelet receptors after stimulation with platelet agonists. This is in contrast to previous studies, which detected an increase in GPVI receptor levels and GPVI mediated platelet aggregation [@Barrachina2019]. Barrachina et al. did not directly measure the integrin α~IIb~β~3~ in response to CRP. A larger sample size would be required to be able to draw conclusions here. Aggregation experiments would have also been useful to compare platelet function across groups, however this technique was not chosen due to the time and large amount of sample required.
+This study did not detect differences in platelet characteristics such as IPC when comparing the high BMI bariatric surgery group with the control group. This small sample size and large standard deviation in the high BMI group would explain why a BMI and IPC association was detected in Chapter \@ref(BMI-platelets-INTERVAL) but wasn't in the current study. There was also no evidence for a difference in levels of platelet receptors under basal conditions, nor differences in levels of platelet receptors after stimulation with platelet agonists. This is in contrast to previous studies, which detected an increase in GPVI receptor levels and GPVI mediated platelet aggregation [@Barrachina2019]. Despite this previous finding, Barrachina et al. did not directly measure the integrin α~IIb~β~3~ in response to CRP so it is possible that there would have been no difference. A larger sample size would be required to be able to draw conclusions here. As well as this, aggregation experiments would have also been useful to compare platelet function across groups, however this technique was not chosen due to time restraints and large amount of sample required.
 
-The principal component analysis suggested that PC4 was able to separate the bariatric and control groups. Although PC4 was not the main source of variance, even with a small N number, this provided evidence that the group (bariatric/control) could explain variation in proteins. Therefore, some protein signatures may be due to the difference in BMI, however it could also be due to other factors which differed across groups such as previous COVID-19 infection or T2D diagnosis. Comparing the proteins which were altered with previous studies also suggests that the current study is likely capturing platelet protein signatures of obesity. Table \@ref(tab:proteome-lit) shows the results that have replicated in the current study when comparing to three previous studies that have looked at the platelet proteome [@Barrachina2019], platelet microvesicle proteome [@Grande2019] and platelet transcriptome in relation to obesity [@Freedman2010]. This points towards platelet proteins which may be altered with obesity such as actin and septin-2. Actin is important in platelet shape change and activation [@Bearer2002; @Barrachina2019]. Higher actin levels in platelets from patients with obesity could contribute to platelet hyperactivity. Mutations in the gene which encodes actin (ACTB) can cause Baraitser-Winter Cerebrofrontofacial syndrome (BWCFF). Patients with this syndrome have been reported to have a low platelet count (thrombocytopenia) with enlarged platelets and a greater immature platelet fraction [@Latham2018]. This actinopathy is known as ACTB-associated syndromic thrombocytopenia. It is therefore possible that increased levels of actin may be indicative of more newly produced platelets. Septins are cytosolic proteins which are also reported to be important in integrin α~IIb~β~3~activation, platelet spreading and clot contraction [@Kim2020]. Recombinant human gelsolin has been shown to be protective against thromboembolism in mice, thereby suggesting that reduced levels seen in the current study could increase thrombosis risk [@Gupta2019]. It would be informative to replicate associations in independent cohorts and to characterise the function of these proteins.
+The principal component analysis suggested that PC4 was able to separate the bariatric and control groups. Although PC4 was not the main source of variance, even with a small N number, this provided evidence that the group (bariatric/control) could explain variation in proteins. Therefore, some protein signatures may be due to the difference in BMI. However, it could also be due to other factors which differed across groups such as previous COVID-19 infection or T2D diagnosis. Concordance with previous studies in terms of proteins reportedly altered with BMI also suggests that the current study is likely capturing platelet protein signatures of obesity. Table \@ref(tab:proteome-lit) shows the results that have replicated in the current study when comparing to three previous studies that have looked at the platelet proteome [@Barrachina2019], platelet microvesicle proteome [@Grande2019] and platelet transcriptome in relation to obesity [@Freedman2010]. 
 
 ```{r proteome-lit,  echo=FALSE}
  options(knitr.kable.NA = "")
@@ -158,10 +155,13 @@ The principal component analysis suggested that PC4 was able to separate the bar
      column_spec(1, width = "5cm") %>%
    landscape()
 ```
-There is also overlap between proteins altered with BMI in the current study and transcripts that are reported to be altered with higher BMI [@Freedman2010]. For example, S100A9 (Myeloid-related protein-14 or MRP-14) platelet transcripts were altered with BMI and the levels of the protein were increased in the bariatric group in the current study. Studies in mice have found evidence that S100A9 is involved in thrombus formation [@Wang2014a], and there is evidence for its involvement in myocardial infarction [@Cai2020]. Likewise, myeloperoxidase (MPO) transcripts were associated with BMI and there were higher protein levels in bariatric patients with obesity. A previous study has shown evidence that MPO can potentiate ADP-induced platelet aggregation in PRP [@Gorudko2013].
 
-These platelet proteins have previously been reported to be associated with BMI and are therefore more likely to be robust associations. This study has also provided some novel platelet proteins which have different levels in bariatric patients with obesity compared with healthy weight controls. For example, there was an increase in levels of APMAP in platelets from the high BMI group. A SNP which is associated with higher levels of APMAP (rs8125909) is associated with higher BMI and greater weight [@Liu2021], therefore it is possible that the protein is involved in weight regulation, rather than higher BMI altering levels of the protein. There was also a decrease in levels of G protein-coupled receptor kinase (GRK6) in the high BMI group. GRKs phosphorylate G protein coupled receptors (GPCRs) that have been activated by agonists, thereby leading to receptor desensitisation [@Chaudhary2020]. GRK6 knockout mice have been shown to have larger aggregatory responses to agonists and more dense and alpha granule secretion, along with increased thrombus formation [@Chaudhary2020] as a result of less receptor desensitisation occurring. These results therefore reflect a platelet proteomic footprint of higher BMI that implicates a hyperactive platelet environment. It would be informative to look at additional measures of platelet activation such as platelet aggregation and calcium mobilisation and to replicate experiments in a larger cohort.
+Evidence from the current study and results from Barrachina et al. towards platelet proteins which may be altered with obesity such as actin, gelsolin and septin-2 [@Barrachina2019]. Actin is important in platelet shape change and activation [@Bearer2002; @Barrachina2019]. Higher actin levels in platelets from patients with obesity could contribute to platelet hyperactivity. Mutations in the gene which encodes actin (ACTB) can cause Baraitser-Winter cerebrofrontofacial syndrome (BWCFF). Patients with this syndrome have been reported to have a low platelet count (thrombocytopenia) with enlarged platelets and a higher immature platelet fraction [@Latham2018]. This actinopathy is known as ACTB-associated syndromic thrombocytopenia. It is therefore possible that increased levels of actin may be indicative of more newly produced platelets. Gelsolin is another platelet cytoskeletal protein, which was lower in the bariatric patient group. Gelsolin levels were shown to be lower in PRP from patients with stable angina pectoralis compared with controls, however they were higher in patients with unstable angina pectoralis and acute myocardial infarction patients [@Yue2011]. Recombinant human gelsolin has been shown to be protective against thromboembolism in mice, thereby suggesting that reduced levels seen in the current study could increase thrombosis risk [@Gupta2019]. It would be informative to replicate associations in independent cohorts and to characterise the function of these proteins. Septins are cytosolic proteins which are also reported to be important in integrin α~IIb~β~3~activation, platelet spreading and clot contraction [@Kim2020]. Septin-2 levels were higher in platelets from bariatric patients, suggesting this may lead to increased platelet activation. Although no difference was found in α~IIb~β~3~ activation, it would be useful to explore whether there are differences in platelet aggregation and platelet spreading.
 
-A post hoc power calculation was performed to determine the range of power for the effect sizes where p<0.05. This study had at least 67% power to detect effect sizes, but for some proteins which had the smaller p values, there was 100% power. A larger sample size would be required to be able to detect smaller effect sizes.
+There is also overlap between platelet proteins altered with BMI in the current study and platelet transcripts that are reported to be altered with higher BMI [@Freedman2010]. For example, S100A9 (Myeloid-related protein-14 or MRP-14) transcripts were altered with BMI and the levels of the protein were increased in the bariatric group in the current study. Studies in mice have found evidence that S100A9 is involved in thrombus formation [@Wang2014a], and there is evidence for its involvement in myocardial infarction [@Cai2020]. Likewise, myeloperoxidase (MPO) transcripts were associated with BMI and there were higher protein levels in bariatric patients with obesity. A previous study has shown evidence that MPO can potentiate ADP-induced platelet aggregation in PRP [@Gorudko2013].
 
-Overall, this study optimised experimental techniques to test platelet function from patients. Samples sizes were limited and no differences were detected in platelet function experiments and Sysmex parameters. Platelet proteomic analysis replicated previous findings in relation to proteins which may be altered by BMI and implicated some novel proteins which are altered by BMI and may lead to changes in platelet function. Larger sample sizes of participants which display more similar characteristics (e.g. similar proportion of participants had previous COVID-19 infection) would be required to confirm findings. 
+These platelet proteins have previously been reported to be associated with BMI and are therefore more likely to be robust associations. This study has also provided some novel platelet proteins which have different levels in bariatric patients with obesity compared with healthy weight controls. For example, there was an increase in levels of APMAP in platelets from the high BMI group. A SNP which is associated with higher levels of APMAP (rs8125909) is associated with higher BMI and greater weight [@Liu2021], therefore it is possible that the protein is involved in weight regulation, rather than higher BMI altering levels of the protein. There was also a decrease in levels of G protein-coupled receptor kinase (GRK6) in the high BMI group. GRKs phosphorylate G protein coupled receptors (GPCRs) that have been activated by agonists, thereby leading to receptor desensitisation [@Chaudhary2020]. GRK6 knockout mice have been shown to have larger aggregatory responses to agonists and more dense and alpha granule secretion, along with increased thrombus formation [@Chaudhary2020] as a result of less receptor desensitisation occurring. These results therefore reflect a platelet proteomic footprint of higher BMI that implicates a hyperactive platelet environment. It would be informative to further investigate the role of these proteins. It would also be important to explore additional measures of platelet activation such as platelet aggregation and calcium mobilisation and to replicate experiments in a larger cohort.
+
+In the proteomics analysis, a post hoc power calculation was performed to determine the range of power for the effect sizes where p<0.05. This study had at least 67% power to detect effect sizes, but for some proteins which had the smaller p values, there was 100% power. A larger sample size would be required to be able to detect smaller effect sizes.
+
+Overall, this study optimised experimental techniques to test platelet function from patients. Sample sizes were limited and no differences were detected in platelet function experiments and Sysmex parameters. Platelet proteomic analysis replicated previous findings in relation to proteins which may be altered by BMI and implicated some novel proteins which are altered by BMI and may lead to changes in platelet function. Larger sample sizes of participants which display more similar characteristics (e.g. similar proportion of participants had previous COVID-19 infection) would be required to confirm findings. 
